--- a/introduccion.tex
+++ b/introduccion.tex
@@ -9,8 +9,10 @@
 
 En la actualidad, el software está presente en casi todos los aspectos de la vida diaria, desde sistemas críticos en la industria aeronáutica y en salud, hasta aplicaciones móviles de uso cotidiano \cite{Pressman} \pp{Libros de ingenieria de software} La evolución de la tecnología y su integración en nuestra sociedad han hecho que la calidad del software sea un factor clave en el desarrollo tecnológico. La ingeniería de software es una disciplina fundamental en el desarrollo y construcción de sistemas de software complejos y de alta calidad \cite{sommerville2016,pressman2019}. 
 %A medida que la tecnología ha avanzado, el software se ha vuelto omnipresente en nuestra vida cotidiana. 
-A medida que el software se vuelve ubicuo gracias a los rápidos avances en tecnología, garantizar la corrección funcional del software es más crucial que nunca. Sin embargo, a menudo sucede que el software desarrollado es defectuoso, lo que causa distintos tipos de inconvenientes a los usuarios finales.
-Además, la creciente demanda de sistemas de software crítico ha llevado a la aparición de diversos desafíos y problemas en su desarrollo y mantenimiento.
+A medida que el software se vuelve ubicuo gracias a los rápidos avances en
+tecnología, garantizar la corrección funcional del software es más crucial que
+nunca. Sin embargo, es bastante común que el software se lance al mercado con defectos, lo que causa distintos tipos de inconvenientes a los usuarios finales.
+Por otra parte, la creciente demanda de sistemas de software crítico ha llevado a la aparición de diversos desafíos y problemas en su desarrollo y mantenimiento.
 
 Para abordar estos problemas, un área de investigación de creciente importancia es la del análisis automático de software, cuyo objetivo es la provisión de herramientas para asistir a los programadores en diversas tareas
 %la identificación de defectos en el software. 
@@ -24,9 +26,28 @@ en diversas tareas cruciales del testing de software \cite{Ammann16,Myers11},
 como la generación automática de entradas para los tests \cite{Cadar08,Christakis15,Iosif02,Luckow14,Fraser11}, 
 y la detección y reporte automáticos de fallas \cite{Pacheco07, Ma15 , Godefroid05, Marinov01, Boyapati02, Godefroid12}.
 
-Aunque estas técnicas implican en muchos casos análisis completamente automatizados, su aplicación suele requerir cierto esfuerzo por parte de los ingenieros de software. Los \emph{model checkers} para software dependen de la definición de \emph{drivers}, programas que permiten construir entradas para el código bajo análisis. De manera similar, en los enfoques de tests unitarios parametrizados \cite{Tillmann:2010} es obligatorio un mecanismo para construir entradas. Algunas herramientas basadas en la ejecución simbólica requieren las llamadas "fábricas de objetos" para construir casos de prueba que incluyan entradas con tipos no primitivos \cite{Tillmann:2008}. Las técnicas automatizadas de generación de tests basadas en la API de un módulo pueden usarse para construir entradas de tipos no primitivos \cite{Pacheco07, Fraser11}, automatizando así los problemas de generación de entradas antes mencionados. Sin embargo, suelen presentar dificultades para generar un buen conjunto de entradas diversas para módulos que manipulan estructuras dinámicas complejas (almacenadas en el heap). Esto es aún más difícil para módulos con APIs ricas \cite{Ponzio:2018}. Muchos autores han abordado este problema definiendo diferentes enfoques para guiar la generación de tests y crear conjuntos más diversos de entradas \cite{Ponzio:2018, Ciupa:2008}.
+Aunque estas técnicas implican en muchos casos análisis completamente
+automatizados, su aplicación suele requerir cierto esfuerzo por parte de los
+ingenieros de software. Los \emph{model checkers} para software dependen de la
+definición de \emph{drivers}, programas que permiten construir entradas para el
+código bajo análisis. De manera similar, en los enfoques de tests unitarios
+parametrizados \cite{Tillmann:2010} es obligatorio un mecanismo para construir
+entradas. Algunas herramientas basadas en la ejecución simbólica requieren las
+llamadas "fábricas de objetos" para construir casos de prueba que incluyan
+entradas con tipos no primitivos \cite{Tillmann:2008}. Las técnicas
+automatizadas de generación de tests basadas en la API de un módulo pueden
+usarse para construir entradas de tipos no primitivos \cite{Pacheco07,
+Fraser11}, automatizando así los problemas de generación de entradas antes
+mencionados. Sin embargo, suelen presentar dificultades para generar un conjunto
+de objetos diversos para módulos que manipulan estructuras dinámicas complejas (almacenadas en el heap). Esto es aún más difícil para módulos con APIs ricas \cite{Ponzio:2018}. Muchos autores han abordado este problema definiendo diferentes enfoques para guiar la generación de tests y crear conjuntos más diversos de entradas \cite{Ponzio:2018, Ciupa:2008}.
 
-En este trabajo, se proponen dos enfoques diferentes para abordar el problema de generar mejores entradas para módulos con estados dinámicos complejos. Por un lado, observamos que la selección de rutinas de la API de módulo, para alimentar una herramienta de generación de entradas y construir estructuras para el análisis de programas (drivers para model checking de software, entradas para tests unitarios, o para tests parametrizados, etc.), tiene un impacto crucial en el análisis. Por esta razón, definimos el concepto de \emph{métodos generadores de objetos} como un subconjunto \(B\) de métodos, extraídos de la API de un módulo \(M\), que pueden emplearse para crear cualquier entrada para \(M\) en un análisis automatizado de programas  (por ejemplo, un driver para model checking de software). 
+En este trabajo, se proponen dos enfoques diferentes para abordar el problema de
+generar objetos para módulos con estados dinámicos complejos. Por un lado,
+observamos que la selección de métodos de la API de módulo, para alimentar una
+herramienta de generación de entradas y construir estructuras para el análisis
+de programas (drivers para model checking de software, entradas para tests
+unitarios, o para tests parametrizados, etc.), tiene un impacto crucial en
+en el rendimiento del análisis. Por esta razón, definimos el concepto de \emph{métodos generadores de objetos} como un subconjunto \(B\) de métodos, extraídos de la API de un módulo \(M\), que pueden emplearse para crear cualquier entrada para \(M\) en un análisis automatizado de programas  (por ejemplo, un driver para model checking de software). 
 Claramente, cuanto mayor sea el número de estructuras diferentes que se puedan crear con \(B\), mayores serán las posibilidades de encontrar errores en \(M\). Decimos que un conjunto de métodos generadores de objetos es suficiente si estos pueden usarse en combinación para construir todas las estructuras posibles de \(M\). Por lo tanto, los generadores de objetos suficientes son la mejor opción posible para encontrar errores. Cabe notar que \(B\) puede contener rutinas superfluas. Una rutina superflua \(s\) es aquella tal que los objetos del módulo pueden construirse usando las rutinas en $B - \{s\}$ (el ejemplo más simple son las rutinas que nunca cambian el estado de los objetos, también denominados métodos puros u observadores \cite{Boyapati02}). Llamamos \emph{minimal} a un conjunto de generadores de objetos \(B\) que no contiene rutinas superfluas. La minimalidad es importante porque proporcionar rutinas superfluas a una herramienta de análisis automático suele impactar negativamente en su eficiencia (la cantidad de formas posibles de combinar \(k\) rutinas usualmente aumenta exponencialmente con respecto a \(k\)). 
 
 Identificar un conjunto suficiente y minimal de métodos generadores de objetos de forma manual requiere de un análisis minucioso de las rutinas disponibles y una comprensión profunda de la semántica del módulo. Esto es especialmente difícil para módulos con APIs ricas, donde hay muchas rutinas y mucha redundancia en la API. Para facilitar la tarea del desarrollador, en este trabajo se proponen distintos enfoques automáticos para identificar conjuntos suficientes y minimales de métodos generadores de objetos, con distintas características. Exploramos aquí el uso de un algoritmo evolutivo y de un algoritmo codicioso (basado en hill climbing), con diferentes funciones objetivo que utilizan técnicas de generación automáticas de test. Además de buscar generadores de objetos suficientes y minimales, nuestros enfoques también tienen en cuenta otras características de los métodos, como la cantidad y la complejidad de sus parámetros, de modo que se favorecen las rutinas “más simples” en la búsqueda. El objetivo es elegir métodos generadores que puedan ser utilizados de manera más fácil y eficiente en los análisis de programas.
