--- a/titlepage-famaf.tex
+++ b/titlepage-famaf.tex
@@ -8,7 +8,7 @@
 \end{center}
 \medskip
 
-{\LARGE \textbf{Generación Automática Eficiente de Objetos a partir de APIs de Clase}}\\ 
+{\LARGE \textbf{Enfoques Eficientes de Generación Automática de Objetos a partir de APIs de Clase}}\\ 
 \vspace{1cm}
 {\Large por Mariano Politano}\\\vspace{1cm}
 
