--- a/resumen.tex
+++ b/resumen.tex
@@ -13,12 +13,12 @@
 % Nuevo título: Enfoques Eficientes de Generación Automática de Objetos a partir de APIs de Clase
 
 Garantizar la corrección funcional del software es objetivo crucial para la
-Ingeniería de Software. Es por esto que se han desarrollado numerosas técnicas 
-automáticas de análisis de software, para asistir a los
+Ingeniería de Software. Numerosas técnicas 
+automáticas de análisis de software se han desarrollado para ayudar a los
 desarrolladores a lograr este objetivo. Muchas de estas técnicas 
 requieren producir un conjunto de objetos para alimentar el programa bajo
-análisis, como por ejemplo, el testing, el model checking de software, etc. 
-Generar un conjunto diverso de objetos para ejercitar adecuadamente el software 
+análisis (por ejemplo, técnicas de testing, de model checking de software,
+etc.). Generar un conjunto diverso de objetos para ejercitar adecuadamente el software 
 es un problema desafiante, sobre todo para programas que manipulan estructuras complejas 
 (ej. estructuras encadenadas almacenadas en el heap).
 
